fix height on mobile

--- a/src/styles/Game.module.css
+++ b/src/styles/Game.module.css
@@ -177,6 +177,7 @@
 @media (max-width: 500px) {
   .main {
     position: relative;
+    min-height: auto;
   }
 
   .menu {
